--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -112,7 +112,7 @@
 <script src="{{ 'script-loader.js' | asset_url }}" defer></script>
 
 {% comment %} 提前注册动态生成的类名 {% endcomment %}
-{% comment %} <section class="md:w-1/3 md:w-1/2 md:w-2/3 md:w-full w-16 w-24 w-32 w-40 w-48 !absolute !top-auto md:w-48 md:w-56 w-48 w-56"></section>  {% endcomment %}
+{% comment %} <section class="md:w-1/3 md:w-1/2 md:w-2/3 md:w-full w-16 w-24 w-32 w-40 w-48 !absolute !top-auto md:w-48 md:w-56 w-48 w-56 shadow-black-700"></section>  {% endcomment %}
 
 </body>
 </html>
