--- a/sections/quick-view.liquid
+++ b/sections/quick-view.liquid
@@ -192,7 +192,7 @@
                             <div class="fl product-action">
                                 <div class="fl f-wrap f-aic f-jcsb">
                                     {%- if settings.qvqty -%}
-                                        <quantity-input class="qtyField mb15" title="{{ 'products.product.quantity' | t }}">
+                                        <quantity-input class="qtyField mb15 overflow-hidden" title="{{ 'products.product.quantity' | t }}">
                                             <a class="qtyBtn minus" name="minus" href="javascript:void(0);" aria-hidden="true"><i class="at at-minus-r" aria-hidden="true"></i></a>
                                             <input type="number" id="quantity" name="quantity" value="1" min="1" class="pr_input qty" />
                                             <a class="qtyBtn plus" name="plus" href="javascript:void(0);" aria-hidden="true"><i class="at at-plus-r" aria-hidden="true"></i></a>
