--- a/sections/color-slider-full.liquid
+++ b/sections/color-slider-full.liquid
@@ -26,11 +26,11 @@
     <div class="rounded-full bg-white py-2 px-4 {{switchW}} mx-auto shadow-sm">
       <div tag-name="color-carousel" data-flickity='{"draggable": false, "asNavFor": "#carousel-main-{{section.id}}", "contain": true, "pageDots": false, "prevNextButtons": false}'>
         {% for block in section.blocks %}
-            <div class="px-1">
-              <div class="cursor-pointer relative rounded-full w-7 h-7 border-solid border border-black-800" style="background-color:{{block.settings.color}}" >
-                <svg class="hidden h-full w-full p-1" t="1684988114041" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2132" width="16" height="16"><path d="M825.768 376.016 825.768 376.016 475.889 731.658l0 0c-8.265 8.395-19.68 13.595-32.287 13.595-12.607 0-24.022-5.2-32.29-13.595l0 0L213.584 530.629l0 0c-8.26-8.355-13.372-19.96-13.372-32.775 0-25.63 20.442-46.372 45.617-46.372 12.607 0 24.027 5.195 32.292 13.592l0 0 165.48 168.17 317.637-322.864 0 0c8.265-8.355 19.68-13.552 32.285-13.552 25.17 0 45.625 20.78 45.625 46.367C839.148 356.012 834.033 367.619 825.768 376.016L825.768 376.016 825.768 376.016z" fill="#F8BE00" p-id="2133"></path></svg>
-              </div>
-            </div>
+        <div class="px-1">
+          <div tag-name="color-block" class="p-[2px] border-solid border border-black-300 rounded-full transition-all duration-500">
+            <div class="cursor-pointer rounded-full w-7 h-7 shadow-inner transition-all duration-500" style="background-color:{{block.settings.color}}" ></div>
+          </div>
+        </div>
         {% endfor %}
       </div>
     </div>
