--- a/assets/custom.css
+++ b/assets/custom.css
@@ -724,6 +724,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   margin-top:auto;
 }
 
+.-ml-4 {
+  margin-left:-1rem;
+}
+
 .block {
   display:block;
 }
@@ -764,10 +768,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   height:2.75rem !important;
 }
 
-.h-10 {
-  height:2.5rem;
-}
-
 .h-11 {
   height:2.75rem;
 }
@@ -784,8 +784,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   height:1.75rem;
 }
 
-.h-\[19rem\] {
-  height:19rem;
+.h-\[17rem\] {
+  height:17rem;
 }
 
 .h-\[50vw\] {
@@ -872,8 +872,36 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   width:1.75rem;
 }
 
+.w-\[10\%\] {
+  width:10%;
+}
+
 .w-\[12\.5\%\] {
   width:12.5%;
+}
+
+.w-\[20\%\] {
+  width:20%;
+}
+
+.w-\[30\%\] {
+  width:30%;
+}
+
+.w-\[40\%\] {
+  width:40%;
+}
+
+.w-\[50\%\] {
+  width:50%;
+}
+
+.w-\[60\%\] {
+  width:60%;
+}
+
+.w-\[70\%\] {
+  width:70%;
 }
 
 .w-auto {
@@ -884,6 +912,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   width:100%;
 }
 
+.w-\[100vw\] {
+  width:100vw;
+}
+
 .-translate-x-1\/2 {
   --tw-translate-x:-50%;
   transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -891,6 +923,16 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .-translate-y-6 {
   --tw-translate-y:-1.5rem;
+  transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-1\/2 {
+  --tw-translate-y:-50%;
+  transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-1\/2 {
+  --tw-translate-y:50%;
   transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1042,6 +1084,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 .bg-black-900 {
   --tw-bg-opacity:1;
   background-color:rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-gray-100 {
+  --tw-bg-opacity:1;
+  background-color:rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .bg-gray-200 {
@@ -1263,6 +1310,14 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   padding-top:2rem;
 }
 
+.pr-8 {
+  padding-right:2rem;
+}
+
+.pt-1 {
+  padding-top:0.25rem;
+}
+
 .text-left {
   text-align:left;
 }
@@ -1347,6 +1402,14 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   line-height:1.25;
 }
 
+.leading-7 {
+  line-height:1.75rem;
+}
+
+.leading-6 {
+  line-height:1.5rem;
+}
+
 .\!text-white {
   --tw-text-opacity:1 !important;
   color:rgb(255 255 255 / var(--tw-text-opacity)) !important;
@@ -1370,6 +1433,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 .text-black-900 {
   --tw-text-opacity:1;
   color:rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-gray-900 {
+  --tw-text-opacity:1;
+  color:rgb(17 24 39 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1554,6 +1622,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     position:absolute;
   }
 
+  .md\:order-2 {
+    order:2;
+  }
+
   .md\:m-0 {
     margin:0px;
   }
@@ -1657,6 +1729,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     margin-top:28%;
   }
 
+  .md\:mr-8 {
+    margin-right:2rem;
+  }
+
   .md\:block {
     display:block;
   }
@@ -1667,10 +1743,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .md\:hidden {
     display:none;
-  }
-
-  .md\:h-14 {
-    height:3.5rem;
   }
 
   .md\:h-8 {
@@ -1743,6 +1815,30 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .md\:w-full {
     width:100%;
+  }
+
+  .md\:w-\[10\%\] {
+    width:10%;
+  }
+
+  .md\:w-\[20\%\] {
+    width:20%;
+  }
+
+  .md\:w-\[30\%\] {
+    width:30%;
+  }
+
+  .md\:w-\[40\%\] {
+    width:40%;
+  }
+
+  .md\:w-\[50\%\] {
+    width:50%;
+  }
+
+  .md\:w-\[60\%\] {
+    width:60%;
   }
 
   .md\:-translate-y-8 {
@@ -1871,6 +1967,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .md\:pt-6 {
     padding-top:1.5rem;
+  }
+
+  .md\:pr-8 {
+    padding-right:2rem;
   }
 
   .md\:text-left {
@@ -2064,7 +2164,7 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     margin-bottom:20%;
   }
 
-  .\32k\:h-\[26rem\] {
-    height:26rem;
+  .\32k\:h-\[22rem\] {
+    height:22rem;
   }
 }
