--- a/sections/accordion.liquid
+++ b/sections/accordion.liquid
@@ -40,7 +40,7 @@
                   </div>
 
               {%- when "imageGrid" -%}
-              {% assign divClass1 = "flex flex-wrap font-semibold" %}
+              {% assign divClass1 = "flex flex-wrap font-semibold md:mb-12 mb-8" %}
               {% assign divClass2 = "xl:w-1/7 lg:w-1/5 md:w-1/3 w-1/2 mb-4" %}
               {% assign divClass3 = "mx-2 rounded overflow-hidden shadow h-full" %}
               {% assign pClass = "md:text-base text-sm leading-tight p-2 pb-0 mb-2" %}
@@ -61,7 +61,7 @@
                   {%- if product.metafields.custom[blkSt.metafield2] != blank -%}
                   <div class="{{ divClass1 }}">
                     <div class="{{ divClass2 }} text-lg">{{blkSt.text2}}</div>
-                    {% for image in product.metafields.custom[blkSt.metafield1].value %}
+                    {% for image in product.metafields.custom[blkSt.metafield2].value %}
                       <div class="{{ divClass2 }}">
                         <div class="{{ divClass3 }}">
                           <p class="{{ pClass }}"> {{image.alt}}</p>
@@ -74,7 +74,7 @@
                   {%- if product.metafields.custom[blkSt.metafield3] != blank -%}
                   <div class="{{ divClass1 }}">
                     <div class="{{ divClass2 }} text-lg">{{blkSt.text4}}</div>
-                    {% for image in product.metafields.custom[blkSt.metafield1].value %}
+                    {% for image in product.metafields.custom[blkSt.metafield3].value %}
                       <div class="{{ divClass2 }}">
                         <div class="{{ divClass3 }}">
                           <p class="{{ pClass }}"> {{image.alt}}</p>
@@ -86,6 +86,50 @@
                   {%- endif -%}
 
 
+              {%- when "imgTxtList" -%}
+              {% assign tClass = 'text-sm font-medium text-gray-900 px-4 py-2' %}
+
+              <div class="flex md:flex-row flex-col justify-between">
+              {% assign thArr = blkSt.th | split: ','  %}
+              
+                <table class=" order-2 md:w-[{{ thArr.size | times: 10 }}%] md:mr-8 -ml-4 w-[100vw]">
+                  <thead class="bg-white border-b text-base">
+                    <tr>
+                      {% for thTxt in thArr %}
+                        <th class="px-4 py-2"> {{thTxt}} </th>
+                      {% endfor %}
+                    </tr>
+                  </thead>
+                  <tbody>
+                  {% comment %} todo为什么0号位是B {% endcomment %}
+                  {% assign AtoZArr = 'A A B C D E F G H I J K L M N O P Q R S T' | split : ' ' %}
+                  {% assign tdArr = blkSt.td | split: '<br>'  %}
+                  {% for tds in tdArr %}
+                  {% assign mod = forloop.index | modulo: 2 %}
+                    {% if mod == 0 %}
+                      {% assign trClass = 'bg-gray-100 border-b' %}
+                    {% else %}
+                      {% assign trClass = 'bg-white border-b' %}
+                    {% endif %}
+
+                    <tr class="{{trClass}}">
+                      <td class="{{tClass}} text-center font-bold">
+                      <span class="rounded-full bg-black-900 text-white h-6 w-6 leading-6 inline-block">{{ AtoZArr[forloop.index] }}</span></td>
+                      {% assign td = tds | split: '-'  %}
+                      {% for item in td %}
+                        <td class="{{tClass}}">{{item}}</td>
+                      {% endfor %}
+                    </tr>
+
+                    {% endfor %}
+                  </tbody>
+                </table>
+
+                <div class="md:w-1/2 md:order-2">
+                  {{ blkSt.image | image_url: width: 1000 | image_tag: width: blkSt.image.width,  loading: 'lazy',class: 'auto' }}
+                </div> 
+              </div>
+            
             {%- endcase -%}
             </div>
 
@@ -199,7 +243,7 @@
             "type": "textarea",
             "id": "content",
             "label":"Content",
-            "info":"格式是固定的:[标题:内容<br>标题2:内容2<br>标题3:内容3]",
+            "info":"格式:[标题:内容<br>标题2:内容2<br>标题3:内容3]",
             "default":"Title:content<br>Title2:content2<br>Title3:content3"
           }
         ]
@@ -269,6 +313,40 @@
             "type": "text",
             "id": "metafield3",
             "label":"List-3 Metafield handle"
+          }
+        ]
+      },
+      {
+        "name": "Image text list",
+        "type": "imgTxtList",
+        "settings": [
+          {
+            "type": "text",
+            "id": "title",
+            "label": "Drop down header",
+            "default":"Geometry"
+          },
+          {
+            "type": "header",
+            "content": "============"
+          },
+          {
+            "type": "image_picker",
+            "id": "image",
+            "label": "Image on the right"
+          },
+          {
+            "type": "textarea",
+            "id": "th",
+            "label": "Table header",
+            "default":" ,SIZE(mm),S,M,L"
+          },
+          {
+            "type": "textarea",
+            "id": "td",
+            "label":"Content",
+            "info":"格式:[2排2列内容-2排3列内容-...-2排n列内容<br>[3排2列内容-3排3列内容-...-3排n列内容]",
+            "default":"Total Length-69-72-74<br>Seat tube angle-73-84-95"
           }
         ]
       }
