产品页锚点可配置 小bug

--- a/sections/logo-slider.liquid
+++ b/sections/logo-slider.liquid
@@ -20,7 +20,7 @@ style="{% if secSt.bg_color != blank %}background-color: {{ secSt.bg_color}};{% 
               {% endfor %}
             </div>
             {% endif %}
-            <p class="mb-8 md:text-3xl text-2xl font-bold">{{block.settings.text_main}}</p>
+            <p class="mb-8 md:text-3xl text-xl font-bold">{{block.settings.text_main}}</p>
             <p class="text-lg">{{block.settings.text_sub}}</p>
           </div>
           {% endfor %}
