--- a/snippets/product-tabs-nav.liquid
+++ b/snippets/product-tabs-nav.liquid
@@ -6,11 +6,11 @@
           <div class="mb-0 text-lg font-semibold py-3 items-center md:flex hidden">{{ product.title }}</div>
           <div tag-name="tabs-wrapper" class="flex text-base font-semibold items-center">
           {% assign pClass = 'mb-0 md:mx-6 mx-4 md:py-3 h-full text-black-500 flex items-center' %}
-            <a href="#nav-features" class="{{pClass}} active md:flex hidden">Features</a>
-            <a href="#nav-specifications" class="{{pClass}}">Specifications</a>
-            <a href="#nav-reviews" class="{{pClass}}">Reviews</a>
+            <a href="#{{sets.anchor_href1}}" class="{{pClass}} active md:flex hidden">{{sets.anchor1}}</a>
+            <a href="#{{sets.anchor_href2}}" class="{{pClass}}">{{sets.anchor2}}</a>
+            <a href="#{{sets.anchor_href3}}" class="{{pClass}}">{{sets.anchor3}}</a>
           </div>
-          <div class="text-sm py-3"> <a class="btn-contrast font-semibold md:py-2 py-1 px-6 block cursor-pointer" tag-name="atc-btn"> Buy Now </a> </div>
+          <div class="text-sm py-3"> <a class="btn-contrast font-semibold md:py-2 py-1 px-6 block cursor-pointer" tag-name="atc-btn">{{ 'products.product.add_to_cart' | t }}</a></div>
         </div>
       </div>
   </div>
