--- a/sections/image-list-text.liquid
+++ b/sections/image-list-text.liquid
@@ -6,7 +6,7 @@
   {%- when "big" -%}
   {% assign imgSizeClass = "md:w-full" %}
   {% assign textMtClass = "md:mt-[28%] mt-8" %}
-  {%- when "defualt" -%}
+  {%- when "default" -%}
   {% assign imgSizeClass = "md:w-[85%]" %}
   {% assign textMtClass = "md:mt-[22%] mt-8" %}
   {%- when "small" -%}
